@@ -4,3 +4,4 @@ rc.atalk.cobalt
 rc.atalk.redhat
 rc.atalk.suse
 rc.atalk.tru64
+atalk
