@@ -1,4 +1,7 @@
-/* Copyright (c) 1990,1993 Regents of The University of Michigan.
+/*
+ * $Id: uams_pgp.c,v 1.4 2001-02-27 17:07:43 rufustfirefly Exp $
+ *
+ * Copyright (c) 1990,1993 Regents of The University of Michigan.
  * Copyright (c) 1999 Adrian Sun (asun@u.washington.edu) 
  * All Rights Reserved.  See COPYRIGHT.
  */
@@ -23,7 +26,7 @@
 #include <bn.h>
 #include <dh.h>
 #include <cast.h>
-#endif
+#endif /* OPENSSL_DHX */
 
 #include <atalk/afp.h>
 #include <atalk/uam.h>
@@ -183,4 +186,5 @@ UAM_MODULE_EXPORT struct uam_export uams_pgp = {
   UAM_MODULE_VERSION,
   uam_setup, uam_cleanup
 };
+
 #endif
